adicionei um parágrafo

--- a/Site-exemplo/index.html
+++ b/Site-exemplo/index.html
@@ -10,5 +10,6 @@
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae corporis ad, sequi voluptates quisquam tempora sapiente, modi recusandae libero porro odit velit rem! Voluptate obcaecati facere, rem voluptatem maxime aliquid?
     </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolorum aperiam maxime autem, molestiae repellendus! Rem nobis deleniti quos vel, libero itaque fugit. Soluta voluptatibus perspiciatis ipsa cupiditate est! Dolorum.</p>
 </body>
 </html>
